# myRobot

./: .env.dev  .env.prod  README.md  nohup.out  pyproject.toml
data/bread/602716040/: bread.db
data/bread/934631369/: bread.db
data/crazy_thursday/: post.json
