[tool.poetry]
name = "myRobot"
version = "0.1.0"
description = "myRobot"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.1"
nonebot-adapter-onebot = "^2.1.1"
nonebot-plugin-russian = "^0.2.3"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.nonebot]
plugins = ["nonebot_plugin_russian", "nonebot_plugin_moyu", "nonebot_plugin_bread_shop", "nonebot_plugin_crazy_thursday"]
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
